fix: nav contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ footer .social {
 }
 
 nav {
+  background-color: rgba(255, 255, 255, 0.1);
   margin-left: auto;
   margin-right: auto;
   height: 90px;
